--- a/todo-app/src/app/todo/todo.component.html
+++ b/todo-app/src/app/todo/todo.component.html
@@ -4,6 +4,6 @@
       <li>id: {{todo.id}}</li>
       <li>userId: {{todo.userId}}</li>
       <li>title: {{todo.title}}</li>
-      <li>completed: <input type="checkbox" [(ngModel)]="todo.completed" /></li>
+      <li>completed: <mat-checkbox [(ngModel)]="todo.completed"></mat-checkbox></li>
     </ul>
 </div>
