--- a/todo-app/src/app/todo/todo.component.html
+++ b/todo-app/src/app/todo/todo.component.html
@@ -8,6 +8,9 @@
             (change)="onTaskStateChanged()"
             [ngModel]="todo.completed"
             labelPosition="before">Task complete</mat-checkbox>
-        </mat-card-header>
+          </mat-card-header>
+          <mat-card-content>
+            <button mat-flat-button color="warn" (click)="onTaskRemoved()">Remove task</button>
+          </mat-card-content>
     </mat-card>
 </div>
