Material - use dialog to create TODOs for fun

--- a/todo-app/src/app/app.component.html
+++ b/todo-app/src/app/app.component.html
@@ -2,4 +2,4 @@
   [todos]="todos"
   (taskStateChanged)="onTaskStateChanged($event)"
   (taskRemoved)="onTaskRemoved($event)"
-  (addTask)="onAddTask($event)"></app-todo-list>
+  (generateTodo)="onAddTodo($event)"></app-todo-list>
