Add validator in create task Dialog

--- a/todo-app/src/app/todo-creator/create-todo-dialog.html
+++ b/todo-app/src/app/todo-creator/create-todo-dialog.html
@@ -4,5 +4,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onCancel()">Cancel</button>
-  <button mat-button (click)="onGenerateTodo(creator.generateTodo())" cdkFocusInitial>OK</button>
+  <button mat-button (click)="creator.isValid() ? onGenerateTodo(creator.generateTodo()) : null" cdkFocusInitial>OK</button>
 </div>
