--- a/todo-app/src/app/login/login.component.html
+++ b/todo-app/src/app/login/login.component.html
@@ -1,5 +1,12 @@
 <div *ngIf="getCurrentUser(); else loginRequired">
-  <p>You are logged in as: {{ getCurrentUser().login }}</p>
+  <mat-list>
+    <h3 mat-subheader>{{ getCurrentUser().login }}'s tasks TODO</h3>
+    <mat-list-item *ngFor="let todo of getMyTodos()">
+        <mat-icon mat-list-icon>turned_in_not</mat-icon>
+        <h4 mat-line>{{todo.title}}</h4>
+        <p mat-line>id={{todo.id}} </p>
+    </mat-list-item>
+  </mat-list>
   <button mat-flat-button color="warn" (click)="onLogout()">Logout</button>
 </div>
 
