--- a/todo-app/src/app/app.component.html
+++ b/todo-app/src/app/app.component.html
@@ -11,6 +11,7 @@
         <span matLine>Login</span>
       </a>
     </mat-nav-list>
+    <mat-spinner [diameter]=30 *ngIf="isLoading"></mat-spinner>
   </mat-sidenav>
   <mat-sidenav-content>
     <router-outlet></router-outlet>
