--- a/todo-app/src/app/todo-creator/create-todo-dialog.html
+++ b/todo-app/src/app/todo-creator/create-todo-dialog.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>Create a new task</h1>
 <div mat-dialog-content>
-  <app-todo-creator #creator></app-todo-creator>
+  <app-todo-creator #creator (keydown.enter)="creator.isValid() ? onGenerateTodo(creator.generateTodo()) : null"></app-todo-creator>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onCancel()">Cancel</button>
-  <button mat-button (click)="creator.isValid() ? onGenerateTodo(creator.generateTodo()) : null" cdkFocusInitial>OK</button>
+  <button mat-button (click)="creator.isValid() ? onGenerateTodo(creator.generateTodo()) : null" [disabled]="!creator.isValid()">OK</button>
 </div>
